2006-10-31  William Jon McCann  <mccann@jhu.edu>

	* configure.ac:
	* daemon/Makefile.am:
	* daemon/gdm.c: (main):
	* daemon/gdmconsolekit.c: (add_param_int), (add_param_boolean),
	(add_param_string), (get_string), (unlock_ck_session),
	(open_ck_session), (close_ck_session):
	* daemon/gdmconsolekit.h:
	* daemon/slave.c: (gdm_slave_check_user_wants_to_log_in),
	(session_child_run), (gdm_slave_session_start):
	* docs/C/gdm.xml:
	Add ConsoleKit support.  Fixes #365375.

2006-10-31  Brian Cameron  <brian.cameron@sun.com>

	* gui/greeter/greeter_item_customlist.c: Fix custom lists so
	  that focus does not leave the username/password entry field.
	* gui/greeter/greeter_item_pam.c: Minor cleanup.

2006-10-30  Brian Cameron  <brian.cameron@sun.com>

        * Release 2.17.1:
        * NEWS: Updated.
        * configure.ac: Update to new release version.
        * gui/greeter/greeter_canvas_item.c, gui/greeter/greeter_system.c:
          Back out patch from 10/17 from Sebastien Bacher <seb128@debian.org>
          since we don't have icons yet.
	* docs/C/gdm.xml: Fix docs.

2006-10-30  Brian Cameron  <brian.cameron@sun.com>

	* gui/greeter/greeter_item_ulist.c: Minor fix to last patch.
	* gui/greeter/themes/circles/circles.xml
	* gui/greeter/themes/happygnome/happygnome.xml:  Add userlist
	  now that it will disappear if there are no users to display.

2006-10-30  Brian Cameron  <brian.cameron@sun.com>

        * gui/greeter/greeter.c, gui/greeter/greeter_item_ulist.[ch],
          gui/greeter_item_pam.c:  Similar usability fixes for gdmgreeter.
          OK/Cancel buttons are now sensitive/insensitive (but only if
          using GTK style buttons), and the userlist now is not shown
          if there are no users.  Added a new item id "userlist-rect"
          which can be used to specify the rectangle containing the
          userlist, so it can also disappear when the userlist is
          empty.
        * gui/greeter/themes/happygnome-list/happygnome.xml:  Now use