@@ -1,3 +1,9 @@
+2006-11-01  William Jon McCann  <mccann@jhu.edu>
+
+	* Makefile.am:
+	* daemon/Makefile.am:
+	Fix make distcheck.
+
 2006-10-31  William Jon McCann  <mccann@jhu.edu>
 
 	* configure.ac:
